--- a/src/App.css
+++ b/src/App.css
@@ -3,36 +3,24 @@
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 3rem;
   pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  padding-right: 1rem;
 }
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 5rem;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: 2.5rem;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+/* @media only screen and (min-width: 500px) {
+  .Posts {
+    width: 100%;
   }
-  to {
-    transform: rotate(360deg);
-  }
-}
+} */
