--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+html, body {
+  min-width: 600px;
+  width: 100%;
+  overflow-x: auto;
+}
+
 body {
   margin: 0;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
