--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,20 @@
   color: white;
 }
 
+.SearchBar {
+  margin-left: 1rem;
+  padding: 0 1rem;
+  border-radius: 1rem;
+  height: 2rem;
+  background-color: #464c5a;
+  color: white;
+  border: 1px solid lightgray;
+}
+
+.SearchBar::placeholder {
+  color: white;
+}
+
 /* @media only screen and (min-width: 500px) {
   .Posts {
     width: 100%;
