--- a/src/App.css
+++ b/src/App.css
@@ -35,6 +35,10 @@
   color: white;
 }
 
+main {
+  padding: 7rem 0;
+}
+
 /* @media only screen and (min-width: 500px) {
   .Posts {
     width: 100%;
