--- a/src/App.css
+++ b/src/App.css
@@ -36,11 +36,18 @@
 }
 
 main {
-  padding: 7rem 0;
+  padding: 6rem 0;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
 }
 
-/* @media only screen and (min-width: 500px) {
+@media only screen and (min-width: 500px) {
   .Posts {
     width: 100%;
   }
-} */
+
+  .Subreddits {
+    width: 100%;
+  }
+}
